[metadata]
name = respire
version = 0.1dev
description = Yet another spore client for python
home_page = https://github.com/spiral-project/respire
maintainer = Rémy Hubscher
maintainer_email = hubscher.remy@gmail.com
description-file =
    README.rst
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Framework :: Pylons
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
requires-dist=
	# API
    cornice
	easydict
	requests
	# Test
	WebTest
	nose
	rxjson
keywords =
    json
    spore
    rest
    http
	spyre
	respire    

[files]
packages = respire
